active cable drawing

--- a/app/views/pages/draw.html.erb
+++ b/app/views/pages/draw.html.erb
@@ -1,8 +1,8 @@
-<h1>Welcome to the drawing board!</h1>
+<div >Welcome to the drawing board!</div>
 
-<div class="container border-zinc-900">
 
-  <canvas id ="canvas" width="500" height="500">
+<div>
+  <canvas class="bg-white border-2 border-black" id="canvas" width="500px" height="500px">
 
   </canvas>
 </div>
