--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,9 +3,9 @@
   <p class="text-lg font-mono">Full-stack developer specializing in React and Ruby on Rails. I have a passion for creating user friendly projects and education. </p>
 </div>
 <div>
-  <svg class="stroke-1 hover:stroke-2">
+  <%# <svg class="stroke-1 hover:stroke-2">
   <!-- ... -->
-</svg>
+  </svg> %>
 </div>
 <div class="container mx-auto pt-5 text-center ring-black ring-2 rounded-lg mt-6">
   <p class="text-red-600 text-5xl font-mono">Talks</p>
@@ -13,7 +13,7 @@
   <div class="flex justify-center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QrPJFI6QLt4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-<div>
+</div>
 
 <div class="container mx-auto pt-5 text-center ring-black ring-2 rounded-lg mt-6">
   <p class="text-red-600 text-5xl font-mono">Projects</p>
@@ -22,6 +22,9 @@
 <div class="container mx-auto pt-5 text-center ring-black ring-2 rounded-lg mt-6">
   <p class="text-red-600 text-5xl font-mono">Blog</p>
 </div>
+
+
+
 
 
 
